# goose

./: Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: install.sh
src/: args.rs  errors.rs  lib.rs  main.rs  methods.rs  processor.rs  setup.rs  utils.rs
