[package]
name = "goose"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
borsh = "0.9.3"
bs58 = "0.4.0"
clap = { version = "4.0.32", features = ["derive"] }
console = "0.15.4"
dirs = "4.0.0"
indicatif = "0.17.2"
mpl-migration-validator = { git = "https://github.com/metaplex-foundation/mpl-migration-validator",  branch = "develop", features = ["no-entrypoint", "serde-feature"] }
serde = "1.0.152"
serde_json = "1.0.91"
serde_yaml = "0.9.16"
solana-client = "1.14"
solana-logger = "1.14"
solana-program = "1.14"
solana-sdk = "1.14"
spl-token = "3.5.0"
thiserror = "1.0.38"
